# PriceOrders

./: .env  .gitignore  AUDIT_REPORT.md  CLAUDE.md  Dockerfile  GEMINI.md  enable_vector.sql  generate_final.py  northflank.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_matching_full.py  test_ocr_v5.py
.agent/workflows/: add-normalizer.md  deploy.md  import-mappings.md  local-dev.md  matching-debug.md  supabase-mcp.md  test-matching.md  update-llm-prompt.md
.github/workflows/: ci.yml  deploy.yml
backend/: __init__.py  config.py  constants.py  main.py
bot/: __init__.py  config.py  main.py
frontend/: app.py
scripts/: apply_migration.py  apply_migration_direct.py  benchmark_llm.py  compare_order_analysis.py  debug_connection.py  debug_excel_raw.py  debug_hybrid.py  extract_matches_for_db.py  generate_embeddings.py  generate_embeddings_fastembed.py  generate_embeddings_gemini.py  generate_embeddings_local.py  generate_embeddings_openai.py  generate_report.py  import_elf_mappings.py  prototype_csv_parser.py  prototype_excel_export.py  prototype_excel_parser.py  reproduce_failure.py  setup_pgvector.py  test_comprehensive_matching.py  test_diverse_matching.py  test_e2e_matching.py  test_elf_matching.py  test_llm_relay.py  test_llm_router_failover.py  test_matching_real_file.py  test_messy_queries.py  test_user_file.py  test_user_file_full.py  verify_refactor.py  verify_supabase.py
tests/: conftest.py  test_bot_matching.py  test_category_preference.py  test_e2e_matching.py  test_matching_full.py  test_matching_unit.py  test_normalizers.py
(+34 files in other folders)
